name:                cbmc-reporter
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          leepike@galois.com
description: cbmc-reporter is a driver for the CBMC model-checker for use in
             verifying C library code.
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

-- library
--   exposed-modules:      CBMC.Report
--   other-modules:

--   build-depends:        base >= 4.6,
--                         xml
--   hs-source-dirs:       src
--   default-language:     Haskell2010
--   ghc-options:          -Wall

executable cbmc-reporter
  main-is:              Report.hs
  other-modules:        ParseXML,
                        CmdLine,
                        ParseSrcs
  hs-source-dirs:       src
  build-depends:        base >= 4.6 && < 5,
                        directory,
                        process,
                        pretty,
                        xml,
                        monadLib,
                        language-c,
                        Spreadsheet,
                        SafeSemaphore
  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
